# postgres-homeworks

./: pyproject.toml
homework-1/: create_tables.sql  main.py
homework-2/: filter_sorting.sql  groupby.sql  simple_queries.sql
homework-3/: queries.sql
homework-4/: alter_northwind.sql  alter_student.sql
homework-5/: fill_db.sql  main.py
